# m3u8-marauder

./: .env.example  .gitignore  README.md  pyproject.toml
.github/ISSUE_TEMPLATE/: bug_report.yml  chore.yml  config.yml  feature_request.yml  pull_request_template.md
.github/workflows/: lint.yml  test.yml
data/: inputs-example.txt
src/: __main__.py
tests/: test_main.py
